# Coordinate_Spaces

./: .gitignore  CMakeLists.txt  README.md
src/: .gitignore  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
src/MeshGenerator/: meshGenerator.hpp  meshGenerator.mm
src/Primitive/: primitive.cpp  primitive.h
src/common/: Transform.h  vec4.cpp  vec4.h
src/shaders/: shaders.metal
